feat: standardize component registration across all BAB PageServices; implement mandatory registerComponent() calls in createComponent methods and remove deprecated self-registration methods